# OperatingSystem

./: CMakeLists.txt  CPU.cpp  CPU.h  Memory.cpp  Memory.h  OperatingSystem.cpp  OperatingSystem.h  Process.cpp  Process.h  README.md  disk.cpp  disk.h  main.cpp
